Improve the cluster api
